<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_colour"
        tools:context=".fragments.NotesEditorFragment"
        android:id="@+id/theBaseNotesEdiorLayout">


        <TextView
            android:id="@+id/saveNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center"
            android:text="@string/notesEditorSaveNoteBtnText"
            android:textColor="@color/colorButtons"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/cancelNoteButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cancelNoteButton" />

        <TextView
            android:id="@+id/cancelNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16sp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center"
            android:text="@string/notesEditorCancelSaveBtnText"
            android:textColor="#F8112B"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/notesTitleText"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginTop="32dp"
            android:background="@color/main_colour"
            android:fontFamily="@font/ubuntu_medium"
            android:hint="@string/notesEditorTitleHint"
            android:paddingStart="12dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/saveNoteButton"
            app:layout_constraintStart_toStartOf="@+id/cancelNoteButton"
            app:layout_constraintTop_toBottomOf="@+id/cancelNoteButton"
            tools:ignore="TextContrastCheck" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dateCreated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/barsColorsVariant"
            android:paddingStart="12dp"
            android:textSize="12sp"
            android:background="@color/main_colour"
            app:layout_constraintEnd_toEndOf="@+id/notesTitleText"
            app:layout_constraintStart_toStartOf="@+id/notesTitleText"
            app:layout_constraintTop_toBottomOf="@+id/notesTitleText"
            tools:text="12 Mar 2022" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/notesContentText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="top|start"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="45dp"
            android:background="@color/main_colour"
            android:fontFamily="@font/ubuntu"
            android:gravity="top"
            android:hint="@string/notesEditorContentHint"
            android:padding="10dp"
            android:textColor="@color/appTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/notesTitleText"
            app:layout_constraintTop_toBottomOf="@+id/dateCreated"
            tools:ignore="TextContrastCheck" />


        <androidx.cardview.widget.CardView
            android:id="@+id/textFormattingOptionsCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:backgroundTint="@color/barsColors"
            app:cardBackgroundColor="@color/main_colour"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="2dp">

                <CheckBox
                    android:id="@+id/optionBold"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/checkbox"
                    android:button="@null"
                    android:checked="false"
                    android:gravity="center"
                    android:text="@string/formatOptionBoldIcon"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/optionItalic"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/checkbox"
                    android:button="@null"
                    android:enabled="true"
                    android:gravity="center"
                    android:text="@string/formatOptionItalicIcon"
                    android:textStyle="italic|bold"
                    android:typeface="monospace" />

                <CheckBox
                    android:id="@+id/optionUnderline"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/checkbox"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/formatOptionUnderlineIcon"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/optionStrikeThrough"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:background="@drawable/checkbox"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/formatOptionStrikeThroughIcon"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>