<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities1.fragments.SetingsFragment"
        android:background="@color/main_colour">

        <TextView
            android:id="@+id/settingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/settingFragmentTitleName"
            android:textColor="@color/tittle_color"
            android:textSize="27sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/resetApp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:fontFamily="@font/ubuntu"
            android:gravity="center|start"
            android:text="@string/resetSettingOptionName"
            android:textAllCaps="false"
            android:textColor="@color/tittle_color"
            app:cornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingTitle"
            app:strokeColor="@color/barsColors" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/main_colour"
            app:strokeColor="@color/barsColors"
            app:strokeWidth="1dp"
            app:layout_constraintEnd_toEndOf="@+id/resetApp"
            app:layout_constraintStart_toStartOf="@+id/resetApp"
            app:layout_constraintTop_toBottomOf="@+id/resetApp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16sp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/themeSettingOptionName"
                android:textColor="@color/tittle_color"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/theme_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical|end"
                android:layout_marginRight="16dp"
                android:thumb="@drawable/ic_dark_mode"
                android:track="@drawable/themeswitch" />

        </com.google.android.material.card.MaterialCardView>


        <Button
            android:id="@+id/deleteAllNotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/deleteAllSettingsOptionName"
            android:textAllCaps="false"
            android:textColor="@color/tittle_color"
            app:backgroundTint="@color/barsColors"
            app:cornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />


    </androidx.constraintlayout.widget.ConstraintLayout>










</layout>