<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AllNotesHomeFragment">

    <TextView
        android:id="@+id/NotesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/homeFragmentTitleText"
        android:textColor="@color/tittle_color"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/publicNotesSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/deleteNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="14dp"
        android:background="@null"
        android:src="@drawable/ic_delete_note"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/cancelDeleteNoteBtn"
        app:layout_constraintEnd_toStartOf="@+id/cancelDeleteNoteBtn"
        app:layout_constraintTop_toTopOf="@+id/cancelDeleteNoteBtn"
        app:tint="#FF1212"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/cancelDeleteNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@null"
        android:src="@drawable/ic_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/NotesTitle"
        app:layout_constraintEnd_toEndOf="@+id/publicNotesSearch"
        app:layout_constraintTop_toTopOf="@+id/NotesTitle"
        app:tint="@color/tittle_color"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/shareNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="14dp"
        android:background="@null"
        android:src="@drawable/ic_share"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/deleteNoteBtn"
        app:layout_constraintEnd_toStartOf="@+id/deleteNoteBtn"
        app:layout_constraintTop_toTopOf="@+id/deleteNoteBtn"
        app:tint="@color/colorButtons"
        tools:visibility="visible" />


    <AutoCompleteTextView
        android:id="@+id/publicNotesSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="30dp"
        android:singleLine="true"
        android:background="@drawable/searchbar_layout"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/searchBarHintText"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/tittle_color"
        android:textColorHint="#727B8B "
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NotesTitle"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/cancelSearchBtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@null"
        android:src="@drawable/ic_cancel"
        android:visibility="invisible"
        android:layout_marginEnd="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/publicNotesSearch"
        app:layout_constraintEnd_toEndOf="@+id/publicNotesSearch"
        app:layout_constraintTop_toTopOf="@+id/publicNotesSearch"
        app:tint="@color/barsColorsVariant"
        tools:visibility="visible" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/publicNotesSearch"
        android:layout_marginTop="128dp"
        android:visibility="invisible"
        android:gravity="center"
        tools:visibility="visible"
        android:alpha="0.9"
        android:id="@+id/nothingFoundIllustrateLayout">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/emptyspace_illustration" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:text="@string/noNotesfoundIllustrationTitleText"
            android:textColor="@color/tittle_color"
            android:fontFamily="@font/ubuntu_medium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/noNotesfoundIllustrationText"
            android:fontFamily="@font/ubuntu"
            android:textColor="#515255"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/publicNotesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:layout_marginTop="12dp"
        android:clipToPadding="false"
        android:paddingStart="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/publicNotesSearch" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>